--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,105 @@
 /*VARIABLES*/
-:root{}
+:root{
+    /*font-imports:*/
+    --font: 'Montserrat', sans-serif;;
+}
 
 /*APPLY-TO-ALL*/
-.pg{}
+.pg{
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 2rem;
+    font-family: var(--font);
+}
+
+.divider{
+    height: 1px;
+    border-radius: 100%;
+    width: 85%;
+    background: lightgrey;
+}
 
 .digit{}
 
 .segments{}
 
-.hide{}
+.hide{
+    display: none;
+}
 
 .on{}
 
 /*CARD*/
-.contentCard{}
+.contentCard{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
 
 
 /*CARD-HEADER*/
-.contentCard__head{}
+.contentCard__head{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
-.head__title{}
+.head__title{
+    font-size: 1.55rem;
+    text-transform: uppercase;
+    background: -webkit-linear-gradient(#EF6C00, #DB6300);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 700;
+    padding-top: 2rem;
+    margin-bottom: 0.45rem;
+}
 
 /*CARD-MAIN-CONTENT*/
-.contentCard__numBox{}
+.contentCard__numBox{
+    height: 70%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+.numBox__title{
+    width: 100%;
+    margin-bottom: 75%;
+    text-align: center;
+    font-size: 1.5rem;
+    background: -webkit-linear-gradient(#EF6C00, #DB6300);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 500;
+}
 
-.digit{}
+.numBox__nums{
+    width: 100%;
+    height: 35%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 35%;
+}
 
-.segment{}
+.digit{
+    border: 1px solid black;
+    height: 100%;
+    width: 35%;
+}
+
+.segment{
+    background: lightgray;
+
+}
 
 .digit:nth-child(1){}
 
